--- a/MIcrosoft_MPI_practice/MIcrosoft_MPI_practice.vcxproj.filters
+++ b/MIcrosoft_MPI_practice/MIcrosoft_MPI_practice.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClCompile Include="w8q3.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="w9q1.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
